--- a/promocoes.html
+++ b/promocoes.html
@@ -132,10 +132,10 @@
             </button>
         </div>
 
-    <!-- Cupons (De X por Y) -->
+   <!-- Cupons e Missões - Primeira Quinzena (02/06 a 16/06) -->
 <section class="promo-section" data-category="coupon">
   <div class="section-header">
-    <h2>Cupons - Promoções Primeira Quinzena</h2>
+    <h2>Cupons - Promoções Primeira Quinzena (02/06 a 16/06)</h2>
   </div>
   <div class="coupons-container">
     <div class="coupon">
@@ -202,9 +202,63 @@
       </div>
     </div>
   </div>
+</section>
 
-  <div class="section-header" style="margin-top: 40px;">
-    <h2>Cupons - Promoções Segunda Quinzena</h2>
+<section class="promo-section missions-section" data-category="missions">
+  <div class="section-header">
+    <h2>Missões - Promoções Primeira Quinzena (02/06 a 16/06)</h2>
+  </div>
+  <div class="missions-container">
+    <div class="mission-card">
+      <div class="mission-header">
+        <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/7f1fca74e98d13d2.jpg" alt="Antarctica Original 473ml" class="mission-brand" width="80" height="40" />
+        <div class="mission-reward">
+          <i class="fas fa-percent" aria-hidden="true"></i>
+          <span>Leve 12 Pague 10</span>
+        </div>
+      </div>
+      <div class="mission-body">
+        <h3>Missão Antarctica Original</h3>
+        <p>Apresente 10 Antarctica Original no estabelecimento para ganhar a promoção</p>
+        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
+          <div class="progress-fill" style="width: 0%"></div>
+        </div>
+        <div class="mission-progress">
+          <span>0/10</span>
+          <span>0% completo</span>
+        </div>
+      </div>
+      <button class="mission-btn" onclick="alert('Missão Antarctica iniciada!')">INICIAR</button>
+    </div>
+
+    <div class="mission-card">
+      <div class="mission-header">
+        <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser Long Neck" class="mission-brand" width="80" height="40" />
+        <div class="mission-reward">
+          <i class="fas fa-percent" aria-hidden="true"></i>
+          <span>Leve 6 Pague 5</span>
+        </div>
+      </div>
+      <div class="mission-body">
+        <h3>Missão Budweiser Long Neck</h3>
+        <p>Apresente 10 Budweiser Long Neck no estabelecimento para ganhar a promoção</p>
+        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
+          <div class="progress-fill" style="width: 0%"></div>
+        </div>
+        <div class="mission-progress">
+          <span>0/10</span>
+          <span>0% completo</span>
+        </div>
+      </div>
+      <button class="mission-btn" onclick="alert('Missão Budweiser iniciada!')">INICIAR</button>
+    </div>
+  </div>
+</section>
+
+<!-- Cupons e Missões - Segunda Quinzena (17/06 a 30/06) -->
+<section class="promo-section" data-category="coupon">
+  <div class="section-header">
+    <h2>Cupons - Promoções Segunda Quinzena (17/06 a 30/06)</h2>
   </div>
   <div class="coupons-container">
     <div class="coupon">
@@ -251,7 +305,7 @@
         </div>
       </div>
       <div class="coupon-action">
-        <button class="use-coupon" onclick="alert('Cupom Budweiser LN aplicado!')">USAR</button>
+        <button class="use-coupon" onclick="alert('Cupom Budweiser aplicado!')">USAR</button>
       </div>
     </div>
 
@@ -273,59 +327,9 @@
   </div>
 </section>
 
-<!-- Missões (Leve N Pague M) -->
 <section class="promo-section missions-section" data-category="missions">
   <div class="section-header">
-    <h2>Missões - Promoções Primeira Quinzena</h2>
-  </div>
-  <div class="missions-container">
-    <div class="mission-card">
-      <div class="mission-header">
-        <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/7f1fca74e98d13d2.jpg" alt="Antarctica Original 473ml" class="mission-brand" width="80" height="40" />
-        <div class="mission-reward">
-          <i class="fas fa-percent" aria-hidden="true"></i>
-          <span>Leve 12 Pague 10</span>
-        </div>
-      </div>
-      <div class="mission-body">
-        <h3>Missão Antarctica Original</h3>
-        <p>Compre 12 Antarctica Original, pague só 10</p>
-        <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="12">
-          <div class="progress-fill" style="width: calc((5 / 12) * 100%)"></div>
-        </div>
-        <div class="mission-progress">
-          <span>5/12</span>
-          <span>42% completo</span>
-        </div>
-      </div>
-      <button class="mission-btn" onclick="alert('Missão Antarctica em andamento!')">CONTINUAR</button>
-    </div>
-
-    <div class="mission-card">
-      <div class="mission-header">
-        <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser Long Neck" class="mission-brand" width="80" height="40" />
-        <div class="mission-reward">
-          <i class="fas fa-percent" aria-hidden="true"></i>
-          <span>Leve 6 Pague 5</span>
-        </div>
-      </div>
-      <div class="mission-body">
-        <h3>Missão Budweiser Long Neck</h3>
-        <p>Compre 6 Budweiser Long Neck, pague só 5</p>
-        <div class="progress-bar" role="progressbar" aria-valuenow="3" aria-valuemin="0" aria-valuemax="6">
-          <div class="progress-fill" style="width: calc((3 / 6) * 100%)"></div>
-        </div>
-        <div class="mission-progress">
-          <span>3/6</span>
-          <span>50% completo</span>
-        </div>
-      </div>
-      <button class="mission-btn" onclick="alert('Missão Budweiser em andamento!')">CONTINUAR</button>
-    </div>
-  </div>
-
-  <div class="section-header" style="margin-top: 40px;">
-    <h2>Missões - Promoções Segunda Quinzena</h2>
+    <h2>Missões - Promoções Segunda Quinzena (17/06 a 30/06)</h2>
   </div>
   <div class="missions-container">
     <div class="mission-card">
@@ -338,16 +342,16 @@
       </div>
       <div class="mission-body">
         <h3>Missão Budweiser Lata</h3>
-        <p>Compre 12 Budweiser Lata, ganhe desconto</p>
-        <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="12">
-          <div class="progress-fill" style="width: calc((2 / 12) * 100%)"></div>
+        <p>Apresente 10 Budweiser Lata 473ml no estabelecimento para ganhar a promoção</p>
+        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
+          <div class="progress-fill" style="width: 0%"></div>
         </div>
         <div class="mission-progress">
-          <span>2/12</span>
-          <span>17% completo</span>
+          <span>0/10</span>
+          <span>0% completo</span>
         </div>
       </div>
-      <button class="mission-btn" onclick="alert('Missão Budweiser Lata em andamento!')">CONTINUAR</button>
+      <button class="mission-btn" onclick="alert('Missão Budweiser Lata iniciada!')">INICIAR</button>
     </div>
 
     <div class="mission-card">
@@ -360,47 +364,20 @@
       </div>
       <div class="mission-body">
         <h3>Missão Brahma Chopp</h3>
-        <p>Compre 12 Brahma Chopp e ganhe 20% OFF</p>
-        <div class="progress-bar" role="progressbar" aria-valuenow="7" aria-valuemin="0" aria-valuemax="12">
-          <div class="progress-fill" style="width: calc((7 / 12) * 100%)"></div>
+        <p>Apresente 10 Brahma Chopp 350ml no estabelecimento para ganhar a promoção</p>
+        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
+          <div class="progress-fill" style="width: 0%"></div>
         </div>
         <div class="mission-progress">
-          <span>7/12</span>
-          <span>58% completo</span>
+          <span>0/10</span>
+          <span>0% completo</span>
         </div>
       </div>
-      <button class="mission-btn" onclick="alert('Missão Brahma Chopp em andamento!')">CONTINUAR</button>
+      <button class="mission-btn" onclick="alert('Missão Brahma Chopp iniciada!')">INICIAR</button>
     </div>
   </div>
 </section>
 
-<!-- Recomendações -->
-<section class="promo-section" data-category="recommendation">
-  <div class="section-header">
-    <h2>Recomendado para Você</h2>
-  </div>
-  <div class="profile-recommendations">
-    <div class="promo-item">
-      <div class="discount-tag">3 por R$20</div>
-      <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser Long Neck" class="promo-img" width="100" height="120" />
-      <div class="promo-details">
-        <h3>Budweiser Long Neck</h3>
-        <p class="promo-price">Oferta imperdível!</p>
-        <button class="add-to-cart" onclick="alert('Produto Budweiser adicionado!')">ADICIONAR</button>
-      </div>
-    </div>
-
-    <div class="promo-item">
-      <div class="discount-tag">R$49,90</div>
-      <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/corona.jpg" alt="Corona 6-pack" class="promo-img" width="100" height="120" />
-      <div class="promo-details">
-        <h3>Corona 6-pack</h3>
-        <p class="promo-price">Preço promocional</p>
-        <button class="add-to-cart" onclick="alert('Produto Corona adicionado!')">ADICIONAR</button>
-      </div>
-    </div>
-  </div>
-</section>
 
         <!-- Integração com Zé Delivery -->
         <section class="promo-section delivery-integration" data-category="integration">
