--- a/promocoes.html
+++ b/promocoes.html
@@ -37,13 +37,13 @@
         <div class="location-dropdown">
           <select id="municipio-select">
             <option value="">-- Escolha seu município --</option>
-            <option value="riodejaneiro">Rio de Janeiro</option>
+            <option value="riojaneiro">Rio de Janeiro</option>
             <option value="saogoncalo">São Gonçalo</option>
             <option value="duquedecaxias">Duque de Caxias</option>
             <option value="novaiguacu">Nova Iguaçu</option>
             <option value="belfordroxo">Belford Roxo</option>
             <option value="niteroi">Niterói</option>
-            <option value="camposdosgoytacazes">Campos dos Goytacazes</option>
+            <option value="camposgoytacazes">Campos dos Goytacazes</option>
             <option value="saojoaodemeriti">São João de Meriti</option>
             <option value="voltaredonda">Volta Redonda</option>
             <option value="petropolis">Petrópolis</option>
