--- a/promooutros.html
+++ b/promooutros.html
@@ -178,12 +178,12 @@
 
     <!-- Primeira Quinzena -->
     <section class="promo-section">
-      <div class="promo-header">Primeira Quinzena – 02/06 a 16/06</div>
+      <div class="promo-header">Validade – 02/06 a 16/06</div>
       
       <div class="side-by-side">
         <!-- Preço normal "De / Por" -->
         <div>
-          <h3>Preço Normal</h3>
+          <h3>De por</h3>
           <div class="cards-grid">
             <div class="card">
               <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/90128594c8795d6436.jpg" alt="Corona" />
@@ -225,7 +225,7 @@
 
         <!-- Promoções "Leve X Pague Y" -->
         <div>
-          <h3>Promoções Leve & Pague</h3>
+          <h3>Leve & Pague</h3>
           <div class="cards-grid">
             <div class="card">
               <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/7f1fca74e98d13d2.jpg" alt="Antarctica Original 473ml" />
@@ -242,72 +242,6 @@
       </div>
     </section>
 
-    <!-- Segunda Quinzena -->
-    <section class="promo-section">
-      <div class="promo-header">Segunda Quinzena – 17/06 a 30/06</div>
-      
-      <div class="side-by-side">
-        <!-- Preço normal "De / Por" -->
-        <div>
-          <h3>Preço Normal</h3>
-          <div class="cards-grid">
-            <div class="card">
-              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/7f1fca74e98d13d2.jpg" alt="Antarctica Original 473ml" />
-              <div class="beer-code">ORI 473</div>
-              <div class="price-box">
-                De: 5,29<br />
-                Por: 4,79
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/0f79580119e9f765.jpg" alt="Spaten Long Neck" />
-              <div class="beer-code">SPA LN</div>
-              <div class="price-box">
-                De: 5,39<br />
-                Por: 4,99
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser Long Neck" />
-              <div class="beer-code">BUD LN</div>
-              <div class="price-box">
-                De: 5,19<br />
-                Por: 4,79
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/7f1fca74e98d13d2.jpg" alt="Antarctica Pilsen 473ml" />
-              <div class="beer-code">AP 473</div>
-              <div class="price-box">
-                De: 4,29<br />
-                Por: 3,99
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Promoções "Leve X Pague Y" -->
-        <div>
-          <h3>Promoções Leve & Pague</h3>
-          <div class="cards-grid">
-            <div class="card">
-              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser Lata 473ml" />
-              <div class="beer-code">BUD 473</div>
-              <div class="promo-text">Leve 12 Pague 10</div>
-            </div>
-            <div class="card">
-              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/c45c9b6f69e9e238.jpg" alt="Brahma Chopp 350ml" />
-              <div class="beer-code">BC 350</div>
-              <div class="promo-text">LEVE 12 GANHE 20% DE DESCONTO</div>
-            </div>
-          </div>
-        </div>
       </div>
-    </section>
-
-  </div>
 </body>
 </html>
