--- a/promocamposdosgoytacazes.html
+++ b/promocamposdosgoytacazes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Promoções Ambev | Belford Roxo</title>
+  <title>Promoções Ambev | Campos dos Goytacazes</title>
 
   <!-- Fonte Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -153,7 +153,7 @@
 <body>
   <div class="container">
     <header class="header">
-      Promoções Ambev - Belford Roxo
+      Promoções Ambev - Campos Dos Goytacazes
       <div style="margin-top: 12px; text-align: center;">
         <button onclick="window.location.href='promocoes.html'" 
                 style="
@@ -183,7 +183,7 @@
       <div class="side-by-side">
         <!-- Preço normal "De / Por" -->
         <div>
-          <h3>De por</h3>
+          <h3>De porl</h3>
           <div class="cards-grid">
             <div class="card">
               <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/90128594c8795d6436.jpg" alt="Corona" />
@@ -241,7 +241,6 @@
         </div>
       </div>
     </section>
-
   </div>
 </body>
 </html>
