--- a/promoriojaneiro.html
+++ b/promoriojaneiro.html
@@ -175,7 +175,6 @@
     </header>
     <!-- resto do conteúdo -->
 
-
     <!-- Primeira Quinzena -->
     <section class="promo-section">
       <div class="promo-header">Validade – 02/06 a 16/06</div>
@@ -186,7 +185,7 @@
           <h3>De por</h3>
           <div class="cards-grid">
             <div class="card">
-              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/90128594c8795d6436.jpg" alt="Corona" />
+              <img src="CORONALN.JPG" alt="Corona" />
               <div class="beer-code">COR LN</div>
               <div class="price-box">
                 De: 7,19<br />
@@ -195,7 +194,7 @@
             </div>
 
             <div class="card">
-              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/93d6d774428522d3.jpg" alt="Stella Artois" />
+              <img src="STELLALN.jpg" alt="Stella Artois" />
               <div class="beer-code">STE LN</div>
               <div class="price-box">
                 De: 5,79<br />
@@ -204,7 +203,7 @@
             </div>
 
             <div class="card">
-              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser 473ml" />
+              <img src="BUD473.jpg" alt="Budweiser 473ml" />
               <div class="beer-code">BUD 473</div>
               <div class="price-box">
                 De: 5,19<br />
@@ -213,7 +212,7 @@
             </div>
 
             <div class="card">
-              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/c45c9b6f69e9e238.jpg" alt="Brahma 473ml" />
+              <img src="BC473.jpg" alt="Brahma 473ml" />
               <div class="beer-code">BC 473</div>
               <div class="price-box">
                 De: 4,69<br />
@@ -228,12 +227,12 @@
           <h3>Promoções Leve & Pague</h3>
           <div class="cards-grid">
             <div class="card">
-              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/7f1fca74e98d13d2.jpg" alt="Antarctica Original 473ml" />
+              <img src="AO473.jpg" alt="Antarctica Original 473ml" />
               <div class="beer-code">ORI 473</div>
               <div class="promo-text">Leve 12 Pague 10</div>
             </div>
             <div class="card">
-              <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser Long Neck" />
+              <img src="BUDLN.jpg" alt="Budweiser Long Neck" />
               <div class="beer-code">BUD LN</div>
               <div class="promo-text">Leve 6 Pague 5</div>
             </div>
