--- a/promobelfordroxo.html
+++ b/promobelfordroxo.html
@@ -8,6 +8,7 @@
   <!-- Fonte Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   
+  
   <style>
     * {
       box-sizing: border-box;
@@ -59,10 +60,10 @@
       padding: 20px 10px;
       border-radius: 0 0 6px 6px;
     }
-    .card {
+        .card {
       background: #fff;
       width: 140px;
-      padding: 10px;
+      padding: 12px;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgb(0 0 0 / 0.1);
       text-align: center;
@@ -70,12 +71,20 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: space-between;
+      min-height: 200px;
     }
-    .card img {
-      max-width: 80px;
-      height: auto;
-      margin-bottom: 8px;
-    }
+
+      .card img {
+        width: 100px;
+        height: 100px;
+        object-fit: contain;
+        margin-bottom: 8px;
+        border-radius: 6px;
+        background-color: #f0f0f0;
+        padding: 6px;
+      }
+
     .beer-code {
       font-weight: 700;
       font-size: 14px;
@@ -140,13 +149,16 @@
         flex-basis: 100%;
       }
       .card {
-        width: 90%;
+        width: 100%;
         max-width: 280px;
+        min-height: 220px;
       }
       .card img {
-        max-width: 120px;
+        width: 120px;
+        height: 120px;
       }
     }
+
   </style>
 </head>
 
