--- a/promocoes.html
+++ b/promocoes.html
@@ -135,7 +135,7 @@
    <!-- Cupons e Missões - Primeira Quinzena (02/06 a 16/06) -->
 <section class="promo-section" data-category="coupon">
   <div class="section-header">
-    <h2>Cupons - Promoções Primeira Quinzena (02/06 a 16/06)</h2>
+    <h2>Cupons (02/06 a 16/06)</h2>
   </div>
   <div class="coupons-container">
     <div class="coupon">
@@ -206,7 +206,7 @@
 
 <section class="promo-section missions-section" data-category="missions">
   <div class="section-header">
-    <h2>Missões - Promoções Primeira Quinzena (02/06 a 16/06)</h2>
+    <h2>Missões (02/06 a 16/06)</h2>
   </div>
   <div class="missions-container">
     <div class="mission-card">
@@ -219,12 +219,12 @@
       </div>
       <div class="mission-body">
         <h3>Missão Antarctica Original</h3>
-        <p>Apresente 10 Antarctica Original no estabelecimento para ganhar a promoção</p>
+        <p>Apresente 12 Antarctica Original no estabelecimento para ganhar a promoção</p>
         <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
           <div class="progress-fill" style="width: 0%"></div>
         </div>
         <div class="mission-progress">
-          <span>0/10</span>
+          <span>0/12</span>
           <span>0% completo</span>
         </div>
       </div>
@@ -241,12 +241,12 @@
       </div>
       <div class="mission-body">
         <h3>Missão Budweiser Long Neck</h3>
-        <p>Apresente 10 Budweiser Long Neck no estabelecimento para ganhar a promoção</p>
+        <p>Apresente 12 Budweiser Long Neck no estabelecimento para ganhar a promoção</p>
         <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
           <div class="progress-fill" style="width: 0%"></div>
         </div>
         <div class="mission-progress">
-          <span>0/10</span>
+          <span>0/12</span>
           <span>0% completo</span>
         </div>
       </div>
