--- a/promocoes.html
+++ b/promocoes.html
@@ -20,7 +20,7 @@
     <div class="app-container">
         <!-- Header com navegação -->
         <header class="app-header">
-            <div class="header-content">
+            <div class="section-header">
                 <h1>Promoções</h1>
                 <div class="notification-icon">
                     <i class="fas fa-bell"></i>
@@ -141,7 +141,7 @@
     <div class="coupon">
       <div class="coupon-content">
         <div class="coupon-brand">
-          <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/90128594c8795d6436.jpg" alt="Corona Long Neck" width="60" height="60" />
+          <img src="CORONALN.JPG" alt="Corona Long Neck" width="60" height="60" />
         </div>
         <div class="coupon-details">
           <h3>De R$7,19 por R$6,49</h3>
@@ -157,7 +157,7 @@
     <div class="coupon">
       <div class="coupon-content">
         <div class="coupon-brand">
-          <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/93d6d774428522d3.jpg" alt="Stella Artois Long Neck" width="60" height="60" />
+          <img src="STELLALN.jpg" alt="Stella Artois Long Neck" width="60" height="60" />
         </div>
         <div class="coupon-details">
           <h3>De R$5,79 por R$5,19</h3>
@@ -173,7 +173,7 @@
     <div class="coupon">
       <div class="coupon-content">
         <div class="coupon-brand">
-          <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser 473ml" width="60" height="60" />
+          <img src="BUD473.jpg" alt="Budweiser 473ml" width="60" height="60" />
         </div>
         <div class="coupon-details">
           <h3>De R$5,19 por R$4,99</h3>
@@ -189,7 +189,7 @@
     <div class="coupon">
       <div class="coupon-content">
         <div class="coupon-brand">
-          <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/c45c9b6f69e9e238.jpg" alt="Brahma 473ml" width="60" height="60" />
+          <img src="BC473.jpg" alt="Brahma 473ml" width="60" height="60" />
         </div>
         <div class="coupon-details">
           <h3>De R$4,69 por R$4,49</h3>
@@ -211,7 +211,7 @@
   <div class="missions-container">
     <div class="mission-card">
       <div class="mission-header">
-        <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/7f1fca74e98d13d2.jpg" alt="Antarctica Original 473ml" class="mission-brand" width="80" height="40" />
+        <img src="AO473.jpg" alt="Antarctica Original 473ml" class="mission-brand" width="80" height="40" />
         <div class="mission-reward">
           <i class="fas fa-percent" aria-hidden="true"></i>
           <span>Leve 12 Pague 10</span>
@@ -233,7 +233,7 @@
 
     <div class="mission-card">
       <div class="mission-header">
-        <img src="https://cdn.awsli.com.br/600x600/2014/2014340/produto/00702b35a1972219.jpg" alt="Budweiser Long Neck" class="mission-brand" width="80" height="40" />
+        <img src="BUDLN.jpg" alt="Budweiser Long Neck" class="mission-brand" width="80" height="40" />
         <div class="mission-reward">
           <i class="fas fa-percent" aria-hidden="true"></i>
           <span>Leve 6 Pague 5</span>
