--- a/promocoes.html
+++ b/promocoes.html
@@ -121,8 +121,8 @@
           <img src="CORONALN.JPG" alt="Corona Long Neck" width="60" height="60" />
         </div>
         <div class="coupon-details">
-          <h3>De R$7,19 por R$6,49</h3>
-          <p>Em Corona Long Neck</p>
+          <h3>Corona Long Neck</h3>
+          <p>De R$7,19 por R$6,49</p>
           <span class="coupon-expiry">Válido até 16/06</span>
         </div>
       </div>
@@ -137,8 +137,8 @@
           <img src="STELLALN.jpg" alt="Stella Artois Long Neck" width="60" height="60" />
         </div>
         <div class="coupon-details">
-          <h3>De R$5,79 por R$5,19</h3>
-          <p>Em Stella Artois Long Neck</p>
+          <h3>Stella Long Neck</h3>
+          <p>De R$5,79 por R$5,19</p>
           <span class="coupon-expiry">Válido até 16/06</span>
         </div>
       </div>
@@ -153,8 +153,8 @@
           <img src="BUD473.jpg" alt="Budweiser 473ml" width="60" height="60" />
         </div>
         <div class="coupon-details">
-          <h3>De R$5,19 por R$4,99</h3>
-          <p>Em Budweiser 473ml</p>
+          <h3>Budweiser 473ml</h3>
+          <p>De R$5,19 por R$4,99</p>
           <span class="coupon-expiry">Válido até 16/06</span>
         </div>
       </div>
@@ -169,8 +169,8 @@
           <img src="BC473.jpg" alt="Brahma 473ml" width="60" height="60" />
         </div>
         <div class="coupon-details">
-          <h3>De R$4,69 por R$4,49</h3>
-          <p>Em Brahma 473ml</p>
+          <h3>Brahma 473ml</h3>
+          <p>De R$4,69 por R$4,49</p>
           <span class="coupon-expiry">Válido até 16/06</span>
         </div>
       </div>
@@ -218,12 +218,12 @@
       </div>
       <div class="mission-body">
         <h3>Missão Budweiser Long Neck</h3>
-        <p>Apresente 12 Budweiser Long Neck no estabelecimento para ganhar a promoção</p>
+        <p>Apresente 6 Budweiser Long Neck no estabelecimento para ganhar a promoção</p>
         <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
           <div class="progress-fill" style="width: 0%"></div>
         </div>
         <div class="mission-progress">
-          <span>0/12</span>
+          <span>0/6</span>
           <span>0% completo</span>
         </div>
       </div>
@@ -264,24 +264,6 @@
             </div>
         </section>
 
-        <!-- Espaço para footer fixo -->
-        <div class="footer-spacer" style="height: 80px;"></div>
-
-        <!-- Rodapé -->
-        <footer class="app-footer">
-            <a href="index.html" class="footer-link">
-                <i class="fas fa-home"></i>
-                <span>Home</span>
-            </a>
-            <a href="escolha_cerveja.html" class="footer-link">
-                <i class="fas fa-beer"></i>
-                <span>Cervejas</span>
-            </a>
-            <a href="promocoes.html" class="footer-link active">
-                <i class="fas fa-percent"></i>
-                <span>Promoções</span>
-            </a>
-        </footer>
     </div>
 
     <!-- Script com tratamento de erros -->
@@ -554,8 +536,6 @@
 
         window.addEventListener('load', checkMobileLayout);
         window.addEventListener('resize', checkMobileLayout);
-    </script> 
-
-    
+    </script>      
 </body>
 </html>
