--- a/promocoes.html
+++ b/promocoes.html
@@ -27,6 +27,8 @@
                     <span class="notification-badge" aria-label="3 notificações não lidas">3</span>
                 </div>
             </div>
+             <button onclick="window.location.href='Inicial.html'">Ir para a Página Inicial</button>
+
         </header>
         <!-- Banner principal rotativo -->
         <div class="promo-carousel-container">
