--- a/promocoes.html
+++ b/promocoes.html
@@ -22,12 +22,12 @@
         <header class="app-header">
             <div class="section-header">
                 <h1>Promoções</h1>
+                <button class="use-coupon" onclick="window.location.href='Inicial.html'">Ir para a Página Inicial</button>
                 <div class="notification-icon">
                     <i class="fas fa-bell"></i>
                     <span class="notification-badge" aria-label="3 notificações não lidas">3</span>
                 </div>
             </div>
-             <button onclick="window.location.href='Inicial.html'">Ir para a Página Inicial</button>
 
         </header>
         <!-- Banner principal rotativo -->
