--- a/promocoes.html
+++ b/promocoes.html
@@ -22,7 +22,7 @@
         <header class="app-header">
             <div class="section-header">
                 <h1>Promoções</h1>
-                <button class="use-coupon" onclick="window.location.href='Inicial.html'">Ir para a Página Inicial</button>
+                <button class="use-coupon" onclick="window.location.href='index.html'">Ir para a Página Inicial</button>
                 <div class="notification-icon">
                     <i class="fas fa-bell"></i>
                     <span class="notification-badge" aria-label="3 notificações não lidas">3</span>
